--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="count">
         <img class="logo" src="./imagess/logo.svg" alt="" />
         <p class="id">Q1 2022</p>
-        <h2 class="bacround-theme">Community DAO</h2>
+        <h2 class="bacround-theme">Sultanbek</h2>
         <p class="bacround-txt">
           Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit
           tincidunt diam integer amet, nec facilisis nec mi. Faucibus posuere
