--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <p class="txt">Releases</p>
-      <h2 class="theme">Releases Our Roadmap</h2>
+      <h2 class="theme">Lorem, ipsum dolor.</h2>
 
       <div class="count">
         <img class="logo" src="./imagess/logo.svg" alt="" />
