--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="count">
           <p class="id">Q1 2022</p>
-          <h2 class="bacround-theme">Community DAO</h2>
+          <h2 class="bacround-theme">Amirxan</h2>
           <p class="bacround-txt">
               Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit
               tincidunt diam integer amet, nec facilisis nec mi. Faucibus posuere
